--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         font-weight: 500;
         font-style: normal;
         font-variation-settings: "slnt" 0;
+        transition: all 0.3s;
       }
       body {
         background-color: hsl(0, 0%, 8%);
@@ -37,12 +38,10 @@
         color: hsl(0, 0%, 100%);
         display: flexbox;
         justify-content: center;
-        max-width: 350px;
+        max-width: 20rem;
         margin: 250px auto;
-        padding: 20px;
-        border-radius: 10px;
-        padding-left: 40px;
-        padding-right: 40px;
+        padding: 1rem 2.5rem 2rem 2.5rem;
+        border-radius: 1rem;
       }
       .container > * {
         display: flex;
@@ -51,28 +50,33 @@
       }
       .green-text {
         color: hsl(75, 94%, 57%);
+        margin-top: 0.6rem;
+        margin-bottom: 1.5rem;
+        font-size: 1rem;
+        font-weight: 500;
       }
       .logo {
         display: block;
         width: 100px;
         border-radius: 50%;
-        margin: 30px auto;
+        margin: 1rem auto;
+        margin-bottom: 1.5rem;
       }
       button {
         display: block;
         width: 100%;
-        margin: 8px auto;
-        padding: 20px;
+        margin: 0.5rem auto;
+        padding: 1rem;
         border: none;
         background-color: hsl(0, 0%, 20%);
         color: hsl(0, 0%, 100%);
-        border-radius: 5px;
-        transition: all 0.3s;
+        border-radius: 0.5rem;
+        font-weight: 700;
+        font-size: 0.9rem;
       }
       button:hover {
         background-color: hsl(75, 94%, 57%);
         color: hsl(0, 0%, 8%);
-        transition: all 0.3s;
       }
       a {
         text-decoration: none;
@@ -80,13 +84,124 @@
       p {
         font-size: 14px;
         color: rgb(163, 163, 163);
+        font-weight: 400;
       }
-      @media (max-width: 700px) {
+      h1 {
+        margin-bottom: 0.5rem;
+        font-size: 1.7rem;
+      }
+      /* for large phones like samsung ultra or iphone pro max phones */
+      @media (max-width: 480px) and (min-width: 426px) {
         .container {
-          margin: 30% 20px 30% 20px;
+          margin: 10em 2.5em 2em 2.5em;
+          padding: 1rem 1.5rem;
+        }
+        body {
+          margin: 0rem;
+        }
+        .logo {
+          margin-top: 0.5rem;
+        }
+        * {
+          transition: all 0.3s;
+        }
+      }
+      /* for phones like iphone 12 (medium size)  */
+
+      @media (max-width: 425px) and (min-width: 390px) {
+        .container {
+          margin: 9rem 2.5em 2em 2.5em;
+          padding: 1rem 1.5rem;
+        }
+        body {
+          margin: 0rem;
+        }
+        .logo {
+          margin-top: 0.5rem;
+        }
+        * {
+          transition: all 0.3s;
+        }
+      }
+      /* small phones like iphone se */
+      @media (min-width: 0px) and (max-width: 389px) {
+        .container {
+          margin: 2em 1.5em 2em 1.5em;
+          padding: 1rem 1.5rem;
+        }
+        h1 {
+          font-size: 1.5rem;
+        }
+        body {
+          margin: 0rem;
+        }
+        .logo {
+          margin-top: 0.5rem;
+          margin-bottom: 1.5rem;
+        }
+        * {
+          transition: all 0.3s;
+        }
+      }
+      /* for 4k monitors */
+      @media (min-width: 2560px) {
+        .container {
+          margin: 20em 50em 20em 50em;
+          padding: 5rem 8rem;
+          max-width: 100rem;
+          border-radius: 2rem;
+        }
+        h1 {
+          font-size: 4rem;
+        }
+        p {
+          font-size: 2rem;
+        }
+        body {
+          margin: 0rem;
+        }
+        .green-text {
+          font-size: 2rem;
+        }
+        .logo {
+          margin-top: 0.5rem;
+          margin-bottom: 1.5rem;
+          width: auto;
+        }
+        * {
+          transition: all 0.3s;
         }
         button {
-          padding: 15px;
+          font-size: 2rem;
+          margin-bottom: 2rem;
+          padding: 2rem;
+          border-radius: 1.5rem;
+        }
+      }
+      /* for tablets */
+      @media (max-width: 1024px) and (min-width: 768px) {
+        .container {
+          margin: 13em 14em;
+          padding: 1rem 1.5rem;
+        }
+        h1 {
+          font-size: 1.5rem;
+        }
+        body {
+          margin: 0rem;
+        }
+        .logo {
+          margin-top: 0.5rem;
+          width: 5rem;
+        }
+        * {
+          transition: all 0.3s;
+        }
+        button {
+          padding: 0.9rem;
+        }
+        .green-text {
+          font-size: 0.9em;
         }
       }
     </style>
