--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
   <body>
     <article>
       <div class="container">
-        <div class="divvf">
-          <img
-            src="./assets/images/avatar-jessica.jpeg"
-            alt="logo"
-            class="logo"
-          />
-        </div>
+        <img
+          src="./assets/images/avatar-jessica.jpeg"
+          alt="logo"
+          class="avatar"
+        />
         <h1>Jessica Randall</h1>
-        <h2 class="green-text">London, United Kingdom</h2>
-        <h2>"Front-end developer and avid reader."</h2>
+        <address class="green-text">London, United Kingdom</address>
+        <p>"Front-end developer and avid reader."</p>
         <ul>
           <li>
             <a href="#">GitHub</a>
